--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Brian James Espinosa Design</title>
     <style>
-      html, body {
+      html,
+      body {
         background-color: #2b4c7e;
         color: #dce0e6;
         font-family: sans-serif;
